fix: fix astro errors

--- a/src/components/Hero/Hero.astro
+++ b/src/components/Hero/Hero.astro
@@ -25,12 +25,12 @@ import "./Hero.css";
         <img src="../../../public/icons/email.png" />
       </div>
     </div>
-    <a href="https://wa.me/3121963859"><button class="start-btn">Lets talk about your next project!</button></a>
+    <a href="https://wa.me/3121963859"
+      ><button class="start-btn">Lets talk about your next project!</button></a
+    >
   </div>
 
   <div class="img-container">
-    <img
-      src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?q=80&w=1000&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8cmFuZG9tJTIwcGVvcGxlfGVufDB8fDB8fHww"
-    />
+    <img src="../../../public/imgs/omarshaped.png" />
   </div>
 </div>
