--- a/src/components/skills/Skills.astro
+++ b/src/components/skills/Skills.astro
@@ -1,53 +1,52 @@
 ---
 import "./skills.css";
-import Card from "./ImageCard";
 ---
 
 <div
-  class="bg-white w-full flex flex-col h-screen pt-20 px-10 items-center align-middle main-div-skill"
+  class="bg-white w-full flex flex-col h-screen tablet:h-full mt-10 pt-20 px-10 tablet:px-0 items-center align-middle main-div-skill"
 >
   <h1>Skills</h1>
   <div
     class="flex flex-row flex-wrap w-full justify-center items-center align-middle skills-container"
   >
-    <div class="w-1/6 skill">
+    <div class="w-1/6 tablet:w-1/3 skill">
       <img src="../../../public/imgs/react.png" />
       <progress value=".9"></progress>
     </div>
-    <div class="w-1/6 skill">
+    <div class="w-1/6 tablet:w-1/3 skill">
       <img src="../../../public/imgs/nodejs.png" />
       <progress value=".9"></progress>
     </div>
-    <div class="w-1/6 skill">
+    <div class="w-1/6 tablet:w-1/3 skill">
       <img src="../../../public/imgs/nextjs.png" />
       <progress value=".9"></progress>
     </div>
-    <div class="w-1/6 skill">
+    <div class="w-1/6 tablet:w-1/3 skill">
       <img src="../../../public/imgs/type.png" />
       <progress value=".9"></progress>
     </div>
-    <div class="w-1/6 skill">
+    <div class="w-1/6 tablet:w-1/3 skill">
       <img src="../../../public/imgs/python.svg" />
       <progress value=".9"></progress>
     </div>
 
-    <div class="w-1/6 skill">
+    <div class="w-1/6 tablet:w-1/3 skill">
       <img src="../../../public/imgs/ia.png" />
       <progress value=".9"></progress>
     </div>
-    <div class="w-1/6 skill">
+    <div class="w-1/6 tablet:w-1/3 skill">
       <img src="../../../public/imgs/cloud.png" />
       <progress value=".9"></progress>
     </div>
-    <div class="w-1/6 skill">
+    <div class="w-1/6 tablet:w-1/3 skill">
       <img src="../../../public/imgs/go2.png" />
       <progress value=".9"></progress>
     </div>
-    <div class="w-1/6 skill">
+    <div class="w-1/6 tablet:w-1/3 skill">
       <img src="../../../public/imgs/pgsql.png" />
       <progress value=".9"></progress>
     </div>
-    <div class="w-1/6 skill">
+    <div class="w-1/6 tablet:w-1/3 skill">
       <img src="../../../public/imgs/fluter.png" />
       <progress value=".9"></progress>
     </div>
