--- a/src/components/Services/Services.css
+++ b/src/components/Services/Services.css
@@ -70,4 +70,17 @@
   .service_subtitle {
     font-size: 2.5rem !important;
   }
+
+  .service-container {
+    justify-content: center;
+    align-items: center;
+    padding: 1rem;
+    margin: 0;
+    img {
+      width: 5.5rem !important;
+      background-color: #9aafe3;
+      padding: 1.3rem !important;
+      border-radius: 1rem;
+    }
+  }
 }
