--- a/src/components/skills/skills.css
+++ b/src/components/skills/skills.css
@@ -8,9 +8,9 @@
 }
 
 .skills-container {
-    margin-top: 4rem;
+  margin-top: 4rem;
   .skill {
-    border-radius: 4rem;
+    border-radius: 2rem !important;
     padding: 1rem;
     margin: 1rem;
     display: flex;
@@ -42,45 +42,53 @@
       background-color: #4682a9;
 
       border-radius: 21px;
-      background-size: 35px 20px, 100% 100%, 100% 100%;
+      background-size:
+        35px 20px,
+        100% 100%,
+        100% 100%;
     }
   }
 }
 
+@media only screen and (max-width: 600px) {
+  .skills-container {
+    .skill {
+      border-radius: 4rem;
+      padding: 0.5rem 0;
+      margin: 0.5rem;
+      display: flex;
+      flex-direction: column;
+      background-color: transparent;
+      justify-content: space-between;
+      align-items: center;
+      justify-content: center;
+      box-shadow: 5px 5px 20px 2px rgb(0 0 0 / 0.25);
 
-.flip-card {
-  background-color: transparent;
-  width: 300px;
-  height: 300px;
-}
+      img {
+        width: 5rem;
+        height: 5rem;
+      }
 
-.flip-card-inner {
-  width: 100%;
-  height: 100%;
-  text-align: center;
-  transition: transform 0.6s;
-  transform-style: preserve-3d;
-}
+      progress {
+        width: 50%;
+        color: aliceblue;
+        background: white;
+        border-radius: 10rem;
+      }
+      progress[value]::-webkit-progress-bar {
+        background-color: #eee;
+        border-radius: 21px;
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25) inset;
+      }
+      progress[value]::-webkit-progress-value {
+        background-color: #4682a9;
 
-.flip-card:hover .flip-card-inner {
-  transform: rotateY(180deg);
-}
-
-.flip-card-front, .flip-card-back {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-}
-
-.flip-card-front {
-  background-color: white;
-  color: black;
-}
-
-.flip-card-back {
-  background-color: #2980b9;
-  color: white;
-  transform: rotateY(180deg);
+        border-radius: 21px;
+        background-size:
+          35px 20px,
+          100% 100%,
+          100% 100%;
+      }
+    }
+  }
 }
