--- a/src/components/proyects/Proyects.astro
+++ b/src/components/proyects/Proyects.astro
@@ -1,5 +1,6 @@
 ---
 import "./proyects.css";
+import { Image } from "astro:assets";
 ---
 
 <div class="h-screen tablet:h-full px-5 proyects-container overflow-y-hidden">
