--- a/src/components/NavBar/NavBar.astro
+++ b/src/components/NavBar/NavBar.astro
@@ -1,10 +1,11 @@
 ---
 import "./NavBar.css";
+import code from "@assets/icons/codificacion.png";
 ---
 
 <header class="navbar" id="navbar">
   <nav>
-    <img  src="../../../public/icons/codificacion.png"/>
+    <img src={code.src} />
     <ul>
       <li><a href="#">Home</a></li>
       <li><a href="#">About</a></li>
