--- a/src/components/skills/Skills.astro
+++ b/src/components/skills/Skills.astro
@@ -1,5 +1,15 @@
 ---
 import "./skills.css";
+import nodeJs from "@assets/imgs/nodejs.png";
+import React from "@assets/imgs/react.png";
+import next from "@assets/imgs/nextjs.png";
+import types from "@assets/imgs/type.png";
+import pyhton from "@assets/imgs/python.svg";
+import ia from "@assets/imgs/ia.png";
+import go from "@assets/imgs/go2.png";
+import cloud from "@assets/imgs/cloud.png";
+import pgsql from "@assets/imgs/pgsql.png";
+import flutter from "@assets/imgs/fluter.png";
 ---
 
 <div
@@ -10,44 +20,44 @@ import "./skills.css";
     class="flex flex-row flex-wrap w-full justify-center items-center align-middle skills-container"
   >
     <div class="w-1/6 tablet:w-1/3 skill">
-      <img src="../../../public/imgs/react.png" />
+      <img src={React.src} />
       <progress value=".9"></progress>
     </div>
     <div class="w-1/6 tablet:w-1/3 skill">
-      <img src="../../../public/imgs/nodejs.png" />
+      <img src={nodeJs.src} />
       <progress value=".9"></progress>
     </div>
     <div class="w-1/6 tablet:w-1/3 skill">
-      <img src="../../../public/imgs/nextjs.png" />
+      <img src={next.src} />
       <progress value=".9"></progress>
     </div>
     <div class="w-1/6 tablet:w-1/3 skill">
-      <img src="../../../public/imgs/type.png" />
+      <img src={types.src} />
       <progress value=".9"></progress>
     </div>
     <div class="w-1/6 tablet:w-1/3 skill">
-      <img src="../../../public/imgs/python.svg" />
+      <img src={pyhton.src} />
       <progress value=".9"></progress>
     </div>
 
     <div class="w-1/6 tablet:w-1/3 skill">
-      <img src="../../../public/imgs/ia.png" />
+      <img src={ia.src} />
       <progress value=".9"></progress>
     </div>
     <div class="w-1/6 tablet:w-1/3 skill">
-      <img src="../../../public/imgs/cloud.png" />
+      <img src={cloud.src} />
       <progress value=".9"></progress>
     </div>
     <div class="w-1/6 tablet:w-1/3 skill">
-      <img src="../../../public/imgs/go2.png" />
+      <img src={go.src} />
       <progress value=".9"></progress>
     </div>
     <div class="w-1/6 tablet:w-1/3 skill">
-      <img src="../../../public/imgs/pgsql.png" />
+      <img src={pgsql.src} />
       <progress value=".9"></progress>
     </div>
     <div class="w-1/6 tablet:w-1/3 skill">
-      <img src="../../../public/imgs/fluter.png" />
+      <img src={flutter.src} />
       <progress value=".9"></progress>
     </div>
   </div>
